# eventfile

./: Cargo.toml  file  rustfmt.toml
examples/: example.rs  zstd.rs
src/: cache.rs  dump.rs  error.rs  file.rs  formats.rs  io.rs  iter.rs  lib.rs  mmap.rs  stream.rs
tests/: smoke.rs
